--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <a href="cursos.html">CURSOS</a>
     <a href="feedback.html">AVALIAÇAO</a>
     <a href="home.html">HOME</a>
-    <a href="login.html">ACESSAR MINHA CONTA</a>
+    <a href="index.html">ACESSAR MINHA CONTA</a>
     
     <input
       type="text"
@@ -45,3 +45,4 @@
   <script src="home.js"></script>
 </body>
 </html>
+
