--- a/cursos.html
+++ b/cursos.html
@@ -13,7 +13,7 @@
     <a href="cursos.html">CURSOS</a>
     <a href="feedback.html">AVALIAÇAO</a>
     <a href="home.html">HOME</a>
-    <a href="login.html">ACESSAR MINHA CONTA</a>
+    <a href="index.html">ACESSAR MINHA CONTA</a>
     <input type="search" placeholder="O que você está procurando" />
   </nav>
 
@@ -64,3 +64,4 @@ Prepare-se para uma vida financeira estável e de sucesso.</p>
 
 </body>
 </html>
+
